--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
     }
 }
 
