--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.raspberry.socialapp"
         minSdkVersion 19
         targetSdkVersion 25
